test/types/sync/vass/ref-sync-5-blank.good
ref-sync-5-blank.chpl:5: error: unresolved call 'MYPROC(sync int(64))'
ref-sync-5-blank.chpl:7: note: this candidate did not match: MYPROC(FORMAL: singleint)
ref-sync-5-blank.chpl:5: note: because actual argument #1 with type 'sync int(64)'
ref-sync-5-blank.chpl:7: note: is passed to formal 'FORMAL: single int(64)'
